[ Adhoc Mobile Issue #8 ] Fix the issue with content item texts smashes into an unreadable paragraph in the smaller device.

--- a/style.css
+++ b/style.css
@@ -758,12 +758,12 @@ a:active {
 # Content
 --------------------------------------------------------------*/
 .site-content {
-	margin: 2em 2em 2em 5em;
+	margin: 2em 5em 2em 4em;
 	text-align: center;
 }
 
 .site-footer {
-	margin: 2em 2em 2em 5em;
+	margin: 2em 5em 2em 5em;
 }
 
 .site-footer-legal {
